profilelist1exp/unpackaged/objects/Idea_Counts_By_Category__c.object
<CustomObject>
    <description>Idea_Counts_By_Category</description>
    <fields>
        <fullName>CommunityIdCategoryStatus__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CommunityIdCategoryStatus</label>
        <length>220</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CommunityName__c</fullName>
        <formula>IF( communityid__c = &quot;09a3000000007Tl&quot;, 
&quot;Ideastorm&quot;,
IF(communityid__c = &quot;09a700000008ezX&quot;, 
&quot;Employeestorm&quot;,
IF(communityid__c = &quot;09a700000008f1g&quot;, 
&quot;Healthcarestorm&quot;,
IF(communityid__c = &quot;09a700000008ezc&quot;, 
&quot;PremierStorm&quot;, null
))))</formula>
        <label>Community Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>communityid__c</fullName>
        <description>Community Id</description>
        <inlineHelpText>Community Id</inlineHelpText>
        <label>Community Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>count__c</fullName>
        <description>Count</description>
        <inlineHelpText>Count</inlineHelpText>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>countwithcomments__c</fullName>
        <description>Count With Comments</description>
        <inlineHelpText>Count With Comments</inlineHelpText>
        <label>Count With Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ideaCategoryCounts</label>
    <nameField>
        <label>Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdeaCategoryCounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>